--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngrx/effects": "^9.1.2",
+    "@ngrx/entity": "^9.1.2",
+    "@ngrx/schematics": "^9.1.2",
+    "@ngrx/store": "^9.1.2",
+    "@ngrx/store-devtools": "^9.1.2",
     "bootstrap": "^4.4.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
