--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "paths": {
       "@env": ["environments/environment"],
       "@shared/*": ["app/shared/*"],
-      "@core/*": ["app/core/*"]
+      "@core/*": ["app/core/*"],
+      "@store/*": ["app/store/*"]
     }
   },
   "angularCompilerOptions": {
