--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
-    "e2e": "cypress open --config-file cypress.dev.json"
+    "e2e:run:dev": "cypress run --config-file cypress.dev.json",
+    "e2e:open:dev": "cypress open --config-file cypress.dev.json"
   },
   "private": true,
   "dependencies": {
@@ -37,21 +38,16 @@
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
     "@testing-library/cypress": "^6.0.0",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^25.2.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "cypress-cucumber-preprocessor": "^2.3.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "jest": "^25.5.4",
+    "jest-preset-angular": "^8.1.3",
     "prettier": "^2.0.5",
     "prettier-tslint": "^0.4.2",
-    "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
