--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
+    "@ngneat/spectator": "^5.7.1",
     "@testing-library/cypress": "^6.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.11.1",
@@ -47,6 +48,7 @@
     "jest": "^25.5.4",
     "jest-marbles": "^2.5.1",
     "jest-preset-angular": "^8.1.3",
+    "ng-mocks": "^9.4.0",
     "prettier": "^2.0.5",
     "prettier-tslint": "^0.4.2",
     "ts-node": "~8.3.0",
