--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store": "^9.1.2",
     "@ngrx/store-devtools": "^9.1.2",
     "bootstrap": "^4.4.0",
+    "date-fns": "^2.15.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "url-assembler": "^2.1.1",
